# automotive-design-compose

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .protolint.yaml  .shellcheckrc  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  RELEASING.md  build.gradle.kts  debug.keystore  deny.toml  gradle.properties  install-rust-toolchains.sh  rustfmt.toml  settings.gradle.kts
.gemini/: all_issues.json  analysis.json  (+3 more)
crates/dc_bundle/: Cargo.toml  README.md  build.rs
crates/dc_bundle/src/: android_interface.rs  definition.rs  definition_file.rs  legacy_definition.rs  legacy_figma_live_update.rs  lib.rs  utils.rs
crates/dc_bundle/src/definition/: element.rs  interaction.rs  layout.rs  modifier.rs  plugin.rs  view.rs
crates/dc_bundle/src/definition/modifier/: LICENSE-APACHE  LICENSE-MIT  affine_transform.rs  layout_transform.rs
crates/dc_bundle/src/legacy_definition/: element.rs  interaction.rs  layout.rs  modifier.rs  plugin.rs  view.rs
crates/dc_bundle/src/legacy_definition/element/: background.rs  color.rs  font.rs  geometry.rs  image.rs  node.rs  path.rs  reactions.rs  variable.rs  vector.rs  view_shape.rs
crates/dc_bundle/src/legacy_definition/interaction/: pointer.rs
crates/dc_bundle/src/legacy_definition/layout/: grid.rs  layout_style.rs  positioning.rs
crates/dc_bundle/src/legacy_definition/modifier/: blend.rs  filter.rs  shadow.rs  text.rs  transform.rs
crates/dc_bundle/src/legacy_definition/plugin/: meter_data.rs
crates/dc_bundle/src/legacy_definition/view/: component.rs  node_style.rs  text_style.rs  view.rs  view_style.rs
crates/dc_bundle/src/proto/: README.md
crates/dc_bundle/src/proto/definition/element/: color.proto  font.proto  scalable.proto  shader.proto
crates/dc_bundle/src/proto/definition/layout/: grid.proto
crates/dc_bundle/src/proto/layout_interface/: jni_layout.proto
crates/dc_bundle/src/proto/live_update/: android_interface.proto
crates/dc_design_package/: Cargo.toml
crates/dc_design_package/src/: document.rs  error.rs  image_context.rs  layout_node.rs  layout_style.rs  lib.rs  reaction_schema.rs  serialized_document.rs  toolkit_layout_style.rs  toolkit_schema.rs  toolkit_style.rs
crates/dc_figma_import/: Cargo.toml  README.md
crates/dc_figma_import/src/: animation_override.rs  animation_spec_schema.rs  content_hash.rs  design_definition.rs  document.rs  error.rs  extended_layout_schema.rs  figma_schema.rs  figma_v1_document_mocks.rs  http_client.rs  image_context.rs  lib.rs  library_resolver.rs  meter_schema.rs  node_tracker.rs  reaction_schema.rs  remote_cache.rs  shader_schema.rs  svg.rs  transform_flexbox.rs  variable_utils.rs
crates/dc_figma_import/src/tools/: dcf_info.rs  fetch.rs  fetch_layout.rs  libdcf_info.rs  mod.rs
crates/dc_figma_import/tests/: ENJKMeYc2vE5pQfgN9aOrY  animation_tests.rs  layout-unit-tests.dcf  layout_tests.rs  live_update_tests.rs  test_fetches.rs
crates/dc_jni/: Cargo.toml  README.md  build.rs
crates/dc_jni/src/: android_interface.rs  error.rs  error_map.rs  jni.rs  layout.rs  layout_manager.rs  lib.rs
crates/dc_jni/src/android_interface/: convert_request.rs  layout_node.rs
crates/dc_layout/: Cargo.toml  README.md
crates/dc_layout/src/: android_interface.rs  debug.rs  into_taffy.rs  layout_manager.rs  layout_style.rs  styles.rs
crates/dc_layout/src/into_taffy/: dimension_proto.rs  dimension_rect.rs
crates/dc_proto/: Cargo.toml  build.rs
crates/dc_proto/src/: android_interface.rs  design.rs  lib.rs  toolkit.rs
crates/dc_proto/src/design/: element.rs  interaction.rs  layout.rs  modifier.rs  plugin.rs
crates/dc_proto/src/design/element/: variable.rs
crates/dc_squoosh_animation/: Cargo.toml
crates/dc_squoosh_animation/src/: lib.rs
crates/figma_import/: Cargo.toml  README.md  build.rs
crates/figma_import/features/: 1_FS-446.feature  2_FS-409.feature  3_FS-408.feature  4_FS-407.feature  5_FS-416.feature  6_FS-404.feature  7_FS-405.feature  8_FS-414.feature
crates/figma_import/list-preview-widget/: code.tsx  manifest.json  package-lock.json  package.json
crates/figma_import/plugin-extended-layout/: README.md  code.ts  manifest.json  package-lock.json  tsconfig.json
crates/figma_import/src/: animation_override.rs  animation_spec_schema.rs  color.rs  component_context.rs  design_definition.rs  document.rs  error.rs  extended_layout_schema.rs  fetch.rs  figma_schema.rs  figma_v1_document_mocks.rs  image_context.rs  jni.rs  layout.rs  lib.rs  meter_schema.rs  proxy_config.rs  reaction_schema.rs  reflection.rs  scalableui_schema.rs  serialized_document.rs  shader_schema.rs  svg.rs  test_jni.rs  toolkit_font_style.rs  toolkit_layout_style.rs  toolkit_schema.rs  toolkit_style.rs  transform_flexbox.rs  variable_utils.rs  vector_schema.rs
crates/figma_import/src/toolkit_layout_style/: compute_layout.rs  layout_style.rs  mod.rs
crates/figma_import/src/tools/: dcf_info.rs  fetch.rs  fetch_layout.rs  mod.rs  reflection.rs
crates/figma_import/tests/: layout-unit-tests.dcf  layout_tests.rs  test_fetches.rs
crates/jni/: Cargo.toml
crates/jni/src/: jni.rs  lib.rs
crates/layout/: Cargo.toml  README.md  build.rs
crates/layout/src/: android_interface.rs  debug.rs  into_taffy.rs  layout.rs  layout_manager.rs  layout_node.rs  layout_style.rs  lib.rs  proto.rs  styles.rs  types.rs
crates/layout/src/into_taffy/: dimension_proto.rs  dimension_rect.rs
crates/layout/src/proto/: layout_manager.rs  layout_node.rs  layout_style.rs  styles.rs  types.rs
crates/layout/tests/: layout-unit-tests.dcf  layout_tests.rs
crates/live_update/: Cargo.toml
crates/live_update/src/: error_map.rs  jni.rs  lib.rs  test_jni.rs
dc_bundle_util/: Cargo.toml
dc_bundle_util/src/: lib.rs  main.rs
support-figma/DC Squoosh designer/rs/: Cargo.toml  README.md
support-figma/DC Squoosh designer/rs/examples/: simple_interpolation.rs
support-figma/DC Squoosh designer/rs/src/: lib.rs
support-figma/dc_squoosh_designer/rs/: Cargo.toml  README.md
support-figma/dc_squoosh_designer/rs/examples/: simple_interpolation.rs
support-figma/dc_squoosh_designer/rs/src/: lib.rs
(+1676 files in other folders)
