[package]
name = "dc_bundle_util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dc_bundle = { version = "0.36.0", path = "../crates/dc_bundle" }
protobuf = "3.2.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.11.0"
