[package]
name = "dc_bundle"
description = "Provides the DesignCompose Bundle and Definition"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
prost.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_bytes.workspace = true
log.workspace = true

[build-dependencies]
prost-build.workspace = true
