[package]
name = "dc_bundle"
description = "Provides the DesignCompose Bundle and Definition"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage = "https://google.github.io/automotive-design-compose"
repository = "https://github.com/google/automotive-design-compose"
readme = "README.md"

[dependencies]
protobuf.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_bytes.workspace = true
log.workspace = true

[build-dependencies]
protobuf-codegen.workspace = true

[dev-dependencies]
tempfile = "3.3.0"
