[package]
name = "dc_figma_import"
description = "Figma document serialization toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage = "https://google.github.io/automotive-design-compose"
repository = "https://github.com/google/automotive-design-compose"
readme = "README.md"

[features]
default = []
fetch = ["clap"]
dcf_info = ["clap"]
fetch_layout = ["clap"]
test_fetches = ["fetch"]


[dependencies]
dc_layout.workspace = true
dc_bundle.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
bincode.workspace = true
thiserror.workspace = true
protobuf.workspace = true
svgtypes.workspace = true

unicode-segmentation.workspace = true
image.workspace = true
euclid.workspace = true

# layout dependencies
taffy.workspace = true
lazy_static.workspace = true

clap = { workspace = true, optional = true }

# logging
log.workspace = true

[build-dependencies]
vergen.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "fetch"
path = "src/bin/fetch.rs"
required-features = ["fetch"]

[[bin]]
name = "dcf_info"
path = "src/bin/dcf_info.rs"
required-features = ["dcf_info"]

[[bin]]
name = "fetch_layout"
path = "src/bin/fetch_layout.rs"
required-features = ["fetch_layout"]
