[package]
name = "dc_jni"
description = "Figma jni library for Android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
dc_bundle = { path = "../dc_bundle" }
figma_import = { path = "../figma_import" }
layout = { path = "../layout" }
log.workspace = true
jni.workspace = true
android_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
bincode.workspace = true
ureq.workspace = true
lazy_static.workspace = true
protobuf.workspace = true
thiserror.workspace = true
bytes.workspace = true
