# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "dc_jni"
description = "Figma jni library for Android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage = "https://google.github.io/automotive-design-compose"
repository = "https://github.com/google/automotive-design-compose"
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
dc_bundle.workspace = true
dc_figma_import.workspace = true
dc_layout.workspace = true
log.workspace = true
jni = "0.22.4"
android_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
reqwest.workspace = true
protobuf.workspace = true
thiserror.workspace = true
bytes.workspace = true
