[package]
name = "dc_proto"
version = "0.1.0"
edition = "2021"
authors = ["DesignCompose Team <aae-design-compose@google.com>"]
description = "Common Protobuf-related code for DesignCompose"
license = "Apache-2.0"
rust-version = "1.68"

[dependencies]
prost.workspace = true
thiserror.workspace = true
