[package]
name = "figma_import"
version = "0.1.0"
authors = ["DesignCompose Team <aae-design-compose@google.com>"]
description = "Figma document serialization toolkit"
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[features]
default = []
reflection = ["serde-reflection", "serde-generate", "clap"]
http_mock = ["phf"]
fetch = ["clap"]
dcf_info = ["clap"]
fetch_layout = ["clap"]


[dependencies]
layout = {path="../layout"}
"ureq" = "2"
"serde" = { version = "1.0", features = ["derive", "rc"] }
"serde_json" = "1.0"
"serde_bytes" = "0.11"
"bincode" = "1.3"
"thiserror" = "1.0"

"svgtypes" = "0.15.0"

unicode-segmentation = "1"
"image" = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
"euclid" = { version = "0.20.13", default-features = false, features = ["serde"] }
"phf" = { version = "0.11", features = ["macros"], optional = true }

# layout dependencies
taffy = "0.3.19"
lazy_static = "1.4.0"

# reflection dependencies
"serde-reflection" = { version = "0.3", optional = true }
"serde-generate" = { version = "0.25.1", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

# logging
log = "0.4"

[build-dependencies]
vergen = { version = "8.3.1", default-features = false, features = ["build", "git", "gitcl"] }
anyhow = "1.0"

[dev-dependencies]
testdir = "0.9.1"

[[bin]]
name = "reflection"
path = "src/bin/reflection.rs"
required-features = ["reflection"]

[[bin]]
name = "fetch"
path = "src/bin/fetch.rs"
required-features = ["fetch"]

[[bin]]
name = "dcf_info"
path = "src/bin/dcf_info.rs"
required-features = ["dcf_info"]

[[bin]]
name = "fetch_layout"
path = "src/bin/fetch_layout.rs"
required-features = ["fetch_layout"]
