[package]
name = "figma_import"
description = "Figma document serialization toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
reflection = ["serde-reflection", "serde-generate", "clap"]
fetch = ["clap"]
dcf_info = ["clap"]
fetch_layout = ["clap"]
test_fetches = ["fetch"]


[dependencies]
layout = { path = "../layout" }
dc_bundle = { path = "../dc_bundle"}
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
bincode.workspace = true
thiserror.workspace = true
prost.workspace = true
svgtypes.workspace = true

unicode-segmentation.workspace = true
image.workspace = true
euclid.workspace = true

# layout dependencies
taffy.workspace = true
lazy_static.workspace = true

# reflection dependencies
serde-reflection = { workspace = true, optional = true }
serde-generate = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

# logging
log.workspace = true

[build-dependencies]
vergen.workspace = true
anyhow.workspace = true
prost-build.workspace = true

[dev-dependencies]
testdir.workspace = true
tempfile.workspace = true

[[bin]]
name = "reflection"
path = "src/bin/reflection.rs"
required-features = ["reflection"]

[[bin]]
name = "fetch"
path = "src/bin/fetch.rs"
required-features = ["fetch"]

[[bin]]
name = "dcf_info"
path = "src/bin/dcf_info.rs"
required-features = ["dcf_info"]

[[bin]]
name = "fetch_layout"
path = "src/bin/fetch_layout.rs"
required-features = ["fetch_layout"]
