[package]
name = "layout"
version = "0.1.0"
edition = "2021"
authors = ["DesignCompose Team <aae-design-compose@google.com>"]
description = "Figma node layout library for Android"
license = "Apache-2.0"
rust-version = "1.68"

[lib]
crate-type = ["rlib", "cdylib"]



[dependencies]
dc_proto = {path = "../dc_proto"}
log.workspace = true
android_logger.workspace = true
serde.workspace = true
taffy.workspace = true
prost.workspace = true
thiserror.workspace = true
