[package]
name = "layout"
description = "Figma node layout library for Android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
dc_bundle = { path = "../dc_bundle"}
log.workspace = true
android_logger.workspace = true
serde.workspace = true
taffy.workspace = true
prost.workspace = true
thiserror.workspace = true
