[package]
name = "live_update"
version = "0.1.0"
authors = ["DesignCompose Team <aae-design-compose@google.com>"]
description = "Figma document serialization library for Android"
edition = "2018"
# https://blog.rust-lang.org/2023/01/09/android-ndk-update-r25.html
rust-version = "1.68"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
figma_import = {path="../figma_import"}
log = "0.4"
jni = "0.21.1"
android_logger = "0.13.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
ureq = "2"
