[package]
name = "dc_squoosh_parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
